# rag-agent-v2

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run_server.py  streamlit_demo.py  test.ipynb
docs/: README.md
src/api/: dependencies.py  main.py  models.py
src/api/routers/: chat.py  document.py  knowledge_base.py
src/database/: __init__.py
src/database/chroma/: chroma.py
src/database/mongo/: BaseDocument.py  mongo.py
src/dialog/: DialogManager.py  DialogMessage.py  SessionService.py  __init__.py
src/dialog/odm/: Session.py
src/document/: __init__.py  document_service.py  parse.py
src/document/odm/: DocumentRecord.py
src/embedding/: __init__.py  factory.py
src/embedding/adapter/: BailianEmbeddingAdapter.py  BaseEmbeddingAdapter.py
src/llm/: Message.py  __init__.py  factory.py
src/llm/adapter/: AnthropicChatAdapter.py  BailianChatAdapter.py  BaseChatAdapter.py  DeepseekChatAdapter.py  OpenaiChatAdapter.py
src/memory/: Memory.py  MemoryManager.py  __init__.py  llm_call.py
src/prompt/: PromptConfig.py  __init__.py  auto_register.py  get_prompt.py  llm_call.py  register.py
src/prompt/dialog/: prompts.toml
src/prompt/dialog/prompt_template/: plain_chat.md
src/prompt/document/: prompts.toml  register.py
src/prompt/memory/: prompts.toml  register.py
src/prompt/memory/prompt_template/: short_term_memory_summary.md
src/prompt/prompt_template/dialog/: RAG_answer.md  register.py  title_sessio.md
src/prompt/prompt_template/memory/: long_term_memory_summary.md  memory_merge.md  register.py
src/prompt/prompt_template/rag/: extract_abstract.md  extract_title.md  query_rewrite.md  query_route.md  register.py
src/prompt/prompt_template/system/: default_system_prompt.md
src/prompt/rag/: prompts.toml  register.py
src/prompt/rag/prompt_template/: grade_texts.md  query_route.md
src/rag/: __init__.py  utils.py
src/rag/ingest/: ingest.py  ingest_service.py
src/rag/ingest/text_splitter/: LangchainTextSplitter.py  MarkdownHeaderTextSplitter.py  MessagesTextSplitter.py  RecursiveCharacterTextSplitter.py  get_chunks.py
src/rag/knowledge_base/: __init__.py  knowledge_base_service.py
src/rag/knowledge_base/odm/: CollectionRecord.py  KnowledgeBase.py
src/rag/retrieve_pipeline/: RetrievePipelineProtocol.py  __init__.py  retrieve.py
src/rag/retrieve_pipeline/enhanced_pipeline/: EnhancedPipeline.py  context_retrieve.py  rerank.py
src/rag/retrieve_pipeline/simple_pipeline/: SimplePipeline.py
src/rag/retriever/: RetrieverProtocol.py  __init__.py
src/rag/retriever/bm25_retriever/: BM25Retriever.py
src/rag/retriever/chroma_retriever/: ChromaRetriever.py  EmbeddingFunction.py
src/rag/text_splitter/: TextSplitterProtocol.py
src/session/: SessionService.py  __init__.py
src/session/dialog/: DialogManager.py  DialogMessage.py
src/session/memory/: LongTermMemory.py  MemoryManager.py  __init__.py
src/session/odm/: Session.py
